--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="source">
         expropiado de
-        <a href="https://github.com/RyanLefebvre/TREE">acáe</a>
+        <a href="https://github.com/RyanLefebvre/TREE">acá</a>
     </div>
 
 </body>
