--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
     </div>
 
     <div class="links">
+        <a class="link" href="https://notjessg.github.io/" target="_blank">
+            <i class="fab fa-github">&nbsp;</i>blog
+        </a>
         <a class="link" href="https://todon.eu/web/accounts/17607" target="_blank">
             <i class="fas fa-todon">&nbsp;</i>Mastodon
         </a>
-        <a class="link" href="https://github.com/notjessg" target="_blank">
-            <i class="fab fa-github">&nbsp;</i>Github
-        </a>
         <a class="link" href="https://www.instagram.com/jess.oknotok/" target="_blank">
             <i class="fab fa-instagram">&nbsp;</i>insta
+        </a>
+        <a class="link" href="https://github.com/notjessg" target="_blank">
+            <i class="fab fa-github">&nbsp;</i>Github
         </a>
     </div>
 
