--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
     </div>
 
     <div class="links">
+        <a class="link" href="https://notjessg.noblogs.org/" target="_blank">
+            <i class="fab fa-wordpress">&nbsp;</i>blog
+        </a>
         <a class="link" href="https://notjessg.github.io/" target="_blank">
-            <i class="fab fa-github">&nbsp;</i>blog
+            <i class="fab fa-github">&nbsp;</i>blog(1)
         </a>
         <a class="link" href="https://todon.eu/web/accounts/17607" target="_blank">
             <i class="fas fa-todon">&nbsp;</i>Mastodon
