--- a/index.html
+++ b/index.html
@@ -21,29 +21,29 @@
     </div>
 
     <div class="description">
-        artesane de ideas. diría que construyo herramientas pero eso suena tan meta como utilitarista. acá comparto mis weadas.
+        artesane de ideas. diría que construyo herramientas pero eso suena tan meta como utilitarista (y de pretensiosa). acá comparto mis weadas.
     </div>
 
     <div class="links">
         <a class="link" href="https://notjessg.noblogs.org/" target="_blank">
-            <i class="fab fa-wordpress">&nbsp;</i>blog
+            <i class="fab fa-wordpress">&nbsp;</i>blog fogata insurrektrans
         </a>
-        <a class="link" href="https://notjessg.github.io/" target="_blank">
-            <i class="fab fa-github">&nbsp;</i>blog(1)
+        <a class="link" href="https://www.twitch.tv/jess_oknotok/" target="_blank">
+            <i class="fab fa-twitch">&nbsp;</i>mi twitch (stream jueguitos)
         </a>
         <a class="link" href="https://todon.eu/web/accounts/17607" target="_blank">
-            <i class="fas fa-todon">&nbsp;</i>Mastodon
+            <i class="fas fa-todon">&nbsp;</i>mi cuenta de mastodon
         </a>
-        <a class="link" href="https://www.instagram.com/jess.oknotok/" target="_blank">
-            <i class="fab fa-instagram">&nbsp;</i>insta
+        <a class="link" href="https://www.instagram.com/ella.jessg/" target="_blank">
+            <i class="fab fa-instagram">&nbsp;</i>mi insta
         </a>
         <a class="link" href="https://github.com/notjessg" target="_blank">
-            <i class="fab fa-github">&nbsp;</i>Github
+            <i class="fab fa-github">&nbsp;</i>mis repos en github
         </a>
     </div>
 
     <div class="source">
-        si querés usar el código, escribime.
+        si querés usar el código, escribime por todon.eu :)
         
     </div>
 
