--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
 
     <div class="links">
         <a class="link" href="https://notjessg.noblogs.org/" target="_blank">
-            <i class="fab fa-wordpress">&nbsp;</i>blog fogata insurrektrans
+            <i class="fab fa-wordpress">&nbsp;</i>fogata insurrektrans (mi blog)
         </a>
         <a class="link" href="https://www.twitch.tv/jess_oknotok/" target="_blank">
             <i class="fab fa-twitch">&nbsp;</i>mi twitch (stream jueguitos)
         </a>
         <a class="link" href="https://todon.eu/web/accounts/17607" target="_blank">
-            <i class="fas fa-todon">&nbsp;</i>mi cuenta de mastodon
+            <i class="fas fa-mastodon">&nbsp;</i>mi cuenta de mastodon (fediverso)
+        </a>
+         <a class="link" href="https://t.me/+n8UMu53IH-xmMmZh" target="_blank">
+            <i class="fas fa-telegram">&nbsp;</i>mi canal de telegram
         </a>
         <a class="link" href="https://www.instagram.com/ella.jessg/" target="_blank">
             <i class="fab fa-instagram">&nbsp;</i>mi insta
