--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>notjessg Tree</title>
+    <title>holi, soy yaz</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="icon" href="./images/pro.jpg" type="image/x-icon" />
@@ -17,36 +17,30 @@
     </a>
 
     <div class="userName">
-        notjessg
+        yaz.de.fuego
     </div>
 
     <div class="description">
-        artesane de ideas. diría que construyo herramientas pero eso suena tan meta como utilitarista (y de pretensiosa). acá comparto mis weadas.
+        acá comparto cositas
     </div>
 
     <div class="links">
-        <a class="link" href="https://notjessg.noblogs.org/" target="_blank">
-            <i class="fab fa-wordpress">&nbsp;</i>fogata insurrektrans (mi blog)
+        <a class="link" href="https://invidious.weblibre.org/watch?v=qtCqDz-xMoQ">
+            <i class="fab fa-youtube">&nbsp;</i>música de mi saga de juegos fav
         </a>
-        <a class="link" href="https://www.twitch.tv/jess_oknotok/" target="_blank">
-            <i class="fab fa-twitch">&nbsp;</i>mi twitch (stream jueguitos)
-        </a>
-        <a class="link" href="https://todon.eu/web/accounts/17607" target="_blank">
-            <i class="fas fa-mastodon">&nbsp;</i>mi cuenta de mastodon (fediverso)
+        <a class="link" href="https://www.instagram.com/" target="_blank">
+            <i class="fab fa-instagram">&nbsp;</i>ig
         </a>
          <a class="link" href="https://t.me/+n8UMu53IH-xmMmZh" target="_blank">
-            <i class="fas fa-telegram">&nbsp;</i>mi canal de telegram
+            <i class="fas fa-telegram">&nbsp;</i>telegram
         </a>
-        <a class="link" href="https://www.instagram.com/ella.jessg/" target="_blank">
-            <i class="fab fa-instagram">&nbsp;</i>mi insta
-        </a>
-        <a class="link" href="https://github.com/notjessg" target="_blank">
-            <i class="fab fa-github">&nbsp;</i>mis repos en github
+        <a class="link" href="https://github.com/" target="_blank">
+            <i class="fab fa-github">&nbsp;</i>github
         </a>
     </div>
 
     <div class="source">
-        si querés usar el código, escribime por todon.eu :)
+        Isn't It Too Dreamy? 🍒
         
     </div>
 
