--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>holi, soy yaz</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <link rel="icon" href="./images/pro.jpg" type="image/x-icon" />
+    <link rel="icon" href="./images/coso.jpg" type="image/x-icon" />
 </head>
 
 <body>
 
     <a class="profilePicture">
-        <img src="./images/pro.jpg" alt="Profile Picture">
+        <img src="./images/coso.jpg" alt="Profile Picture">
     </a>
 
     <div class="userName">
