--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
             <i class="fab fa-youtube">&nbsp;</i>música de mi saga de juegos fav
         </a>
         <a class="link" href="https://www.instagram.com/" target="_blank">
-            <i class="fab fa-instagram">&nbsp;</i>ig
+            <i class="fab fa-instagram">&nbsp;</i>ig (en construcción)
         </a>
          <a class="link" href="https://t.me/+n8UMu53IH-xmMmZh" target="_blank">
             <i class="fas fa-telegram">&nbsp;</i>telegram
         </a>
+        <a class="link" href="https://notjessg.github.io/" target="_blank">
+            <i class="fab fa-chrome">&nbsp;</i>página web (en construcción)
+        </a>
         <a class="link" href="https://github.com/" target="_blank">
-            <i class="fab fa-github">&nbsp;</i>github
+            <i class="fab fa-github">&nbsp;</i>github (en construcción)
         </a>
     </div>
 
