--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <a class="link" href="https://invidious.weblibre.org/watch?v=qtCqDz-xMoQ">
             <i class="fab fa-youtube">&nbsp;</i>música de mi saga de juegos fav
         </a>
-        <a class="link" href="https://www.instagram.com/" target="_blank">
-            <i class="fab fa-instagram">&nbsp;</i>ig (en construcción)
+        <a class="link" href="https://www.instagram.com/yaz.de.fuego/" target="_blank">
+            <i class="fab fa-instagram">&nbsp;</i>ig
         </a>
          <a class="link" href="https://t.me/+n8UMu53IH-xmMmZh" target="_blank">
-            <i class="fas fa-telegram">&nbsp;</i>telegram
+            <i class="fab fa-telegram">&nbsp;</i>telegram
         </a>
         <a class="link" href="https://notjessg.github.io/" target="_blank">
             <i class="fab fa-chrome">&nbsp;</i>página web (en construcción)
