--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <i class="fab fa-instagram">&nbsp;</i>ig
         </a>
          <a class="link" href="https://t.me/+n8UMu53IH-xmMmZh" target="_blank">
-            <i class="fab fa-telegram">&nbsp;</i>telegram
+            <i class="fab fa-telegram">&nbsp;</i>+ música, escritos, poesía
         </a>
         <a class="link" href="https://notjessg.github.io/" target="_blank">
             <i class="fab fa-chrome">&nbsp;</i>página web (en construcción)
